PHOTO: fix bottom image cropping problem - introduce bottomOffset fotorama hack

--- a/photo/css/photo.scss
+++ b/photo/css/photo.scss
@@ -225,12 +225,11 @@ a {
 }
 
 #fotorama {
-  margin: 10px 0 30px 0;
+  margin: 25px 0 0 0;
   text-align: center;
 
   img {
     width: 100%;
-    margin-top: 20px;
   }
 
   h2 {
@@ -245,7 +244,7 @@ a {
   font-family: $font-family;
   font-size: 13px;
   line-height: 1.3;
-  margin: 0;
+  margin: 10px 0 0 0;
   color: $font-color;
   text-align: center;
 }
